--- a/package.json
+++ b/package.json
@@ -18,11 +18,28 @@
   "types": "dist/types/index.d.ts",
   "scripts": {
     "build": "rollup -c",
-    "test": "cross-env TS_NODE_COMPILER_OPTIONS={\\\"module\\\":\\\"commonjs\\\"} mocha -r ts-node/register test/**/*-test.ts"
+    "test": "cross-env TS_NODE_COMPILER_OPTIONS={\\\"module\\\":\\\"commonjs\\\"} nyc mocha",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls"
   },
   "files": [
     "dist"
   ],
+  "nyc": {
+    "all": true,
+    "extension": [
+      ".ts",
+      ".tsx"
+    ],
+    "include": "src",
+    "exclude": [
+      "**/*.d.ts"
+    ],
+    "reporter": [
+      "text-lcov",
+      "html"
+    ],
+    "temp-dir": "coverage"
+  },
   "peerDependencies": {
     "redux": ">=1"
   },
@@ -31,13 +48,16 @@
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.7.11",
     "chai": "^4.2.0",
+    "coveralls": "^3.0.8",
     "cross-env": "^6.0.3",
     "mocha": "^6.2.1",
+    "nyc": "^14.1.1",
     "redux": "4.0.4",
     "rollup": "^1.23.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^5.1.2",
     "rollup-plugin-typescript2": "^0.24.3",
+    "source-map-support": "^0.5.16",
     "ts-node": "^8.4.1",
     "typescript": "^3.6.2"
   }
