--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ node_js:
 script:
 - yarn build
 - yarn test
-- yarn run coveralls
+- yarn --silent run coveralls
 deploy:
   provider: npm
   email: torsten.schlieder@gmx.net
